Cleanup: OpenAPI + API rework (#754)
